added docker file

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,17 +1,5 @@
-# Utilisation de l'image de base Ubuntu
-FROM ubuntu:jammy
-
-# Mise à jour et installation de paquets nécessaires
-RUN apt-get update && \
-    apt-get install -y \
-    curl \
-    git \
-    gcc \
-    && rm -rf /var/lib/apt/lists/*
-
-# Installation de Go 1.21.6
-ENV GOLANG_VERSION 1.21.6
-RUN curl -fsSL https://golang.org/dl/go$GOLANG_VERSION.linux-amd64.tar.gz | tar -C /usr/local -xz
+# Utilisation d'une image Docker avec Go 1.21.6
+FROM golang:1.21.6
 
 # Configuration de l'environnement Go
 ENV PATH=$PATH:/usr/local/go/bin
@@ -22,8 +10,10 @@ WORKDIR /app/
 # Copie des fichiers de l'application
 COPY . .
 # Exécution des commandes spécifiées
-RUN go get 
+RUN go mod tidy 
+RUN go get github.com/steebchen/prisma-client-go
 RUN go run github.com/steebchen/prisma-client-go generate 
+RUN go get 
 RUN go build -o ./out
 
 # Exécution de l'application
