added some stuff

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,1 +1,5 @@
 DATABASE_URL = "postgresql://<USERNAME>:<PASSWORD>@localhost:5432/pc3r?schema=public"
+SUPABASE_DATABASE_URL=""
+SUPABASE_DATABASE_PASSWORD = ""
+SNCF_API_KEY =""
+TOKEN_SECRET_KEY="TOKEN_SECRET_KEY"
