--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,13 +25,16 @@
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
     "gsap": "^3.12.5",
+    "lottie-react": "^2.4.0",
     "lucide-react": "^0.358.0",
     "next": "14.1.3",
     "next-themes": "^0.3.0",
+    "prop-types": "^15.8.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
     "react-icons": "^5.0.1",
+    "react-lottie": "^1.2.4",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.2.1",
     "tailwind-scrollbar-hide": "^1.1.7",
