--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,1 +1,5 @@
 NEXT_PUBLIC_SERVER_URL = localhost:5000
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME = 
+NEXT_PUBLIC_CLOUDINARY_API_KEY  = 
+NEXT_PUBLIC_CLOUDINARY_API_SECRET  = 
+NEXT_PUBLIC_CLOUDINARY_PRESET  = 
